# node-webrtc

./: .clang-format  .clang-tidy  .envrc  .gitignore  .xcode-version  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  client.js  flake.nix  package.json  server.js
docs/: build-from-source.md
lib/: binding.js  mediadevices.js  peerconnection.js
patches/: cmake-js+7.2.1.patch  cmake-js+7.3.0.patch
prebuilds/darwin-arm64/: README.md  package.json
prebuilds/darwin-x64/: README.md  package.json
prebuilds/linux-arm64/: README.md  package.json
prebuilds/linux-x64/: README.md  package.json
prebuilds/win32-x64/: README.md  index.js  package.json
scripts/: build-from-source.js  build-vars.js  build-webrtc.bat  build-webrtc.sh  configure-webrtc.sh  debug-tests.sh  download-webrtc.bat  download-webrtc.sh  install_macos_sdk.sh  make-prebuilt.js
src/: binding.cc  converters.h  test.cc  test.h
src/converters/: absl.h  arguments.h  interfaces.h  macros.h  napi.cc  napi.h  null.cc  null.h  object.h  undefined.cc  undefined.h  webrtc.cc  webrtc.h
src/dictionaries/: rtc_peer_connection_on_ice_error_event.h
src/dictionaries/macros/: decls.h  def.h  impls.h  napi.h
src/dictionaries/node_webrtc/: extended_rtc_configuration.cc  extended_rtc_configuration.h  image_data.cc  image_data.h  media_track_settings.cc  media_track_settings.h  rtc_answer_options.cc  rtc_answer_options.h  rtc_dtls_fingerprint.cc  rtc_dtls_fingerprint.h  rtc_media_stream_init.cc  rtc_media_stream_init.h  rtc_offer_options.cc  rtc_offer_options.h  rtc_on_data_event_dict.cc  rtc_on_data_event_dict.h  rtc_outh_credential.cc  rtc_outh_credential.h  rtc_session_description_init.cc  rtc_session_description_init.h  rtc_video_source_init.cc  rtc_video_source_init.h  some_error.cc  some_error.h  unsigned_short_range.cc  unsigned_short_range.h
src/dictionaries/webrtc/: data_channel_init.cc  data_channel_init.h  ice_candidate_interface.cc  ice_candidate_interface.h  ice_server.cc  ice_server.h  rtc_configuration.cc  rtc_configuration.h  rtc_error.cc  rtc_error.h  rtc_stats.cc  rtc_stats.h  rtc_stats_member_interface.cc  rtc_stats_member_interface.h  rtc_stats_report.cc  rtc_stats_report.h  rtcp_parameters.cc  rtcp_parameters.h  rtp_capabilities.cc  rtp_capabilities.h  rtp_codec_capability.cc  rtp_codec_capability.h  rtp_codec_parameters.cc  rtp_codec_parameters.h  rtp_encoding_parameters.cc  rtp_encoding_parameters.h  rtp_header_extension_capability.cc  rtp_header_extension_capability.h  rtp_header_extension_parameters.cc  rtp_header_extension_parameters.h  rtp_parameters.cc  rtp_parameters.h  rtp_source.cc  rtp_source.h  rtp_transceiver_init.cc  rtp_transceiver_init.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h
src/enums/macros/: decls.h  def.h  impls.h
src/enums/node_webrtc/: binary_type.cc  binary_type.h  rtc_dtx_status.cc  rtc_dtx_status.h  rtc_ice_candidate_type.cc  rtc_ice_candidate_type.h  rtc_ice_component.cc  rtc_ice_component.h  rtc_ice_credential_type.cc  rtc_ice_credential_type.h  rtc_priority_type.cc  rtc_priority_type.h  rtc_sdp_type.cc  rtc_sdp_type.h
src/enums/webrtc/: bundle_policy.cc  bundle_policy.h  data_state.cc  data_state.h  degradation_preference.cc  degradation_preference.h  dtls_transport_state.cc  dtls_transport_state.h  ice_connection_state.cc  ice_connection_state.h  ice_gathering_state.cc  ice_gathering_state.h  ice_role.cc  ice_role.h  ice_transport_state.cc  ice_transport_state.h  ice_transports_type.cc  ice_transports_type.h  media_type.cc  media_type.h  peer_connection_state.cc  peer_connection_state.h  rtcp_mux_policy.cc  rtcp_mux_policy.h  rtp_transceiver_direction.cc  rtp_transceiver_direction.h  sctp_transport_state.cc  sctp_transport_state.h  sdp_semantics.cc  sdp_semantics.h  signaling_state.cc  signaling_state.h  track_state.cc  track_state.h  video_frame_buffer_type.cc  video_frame_buffer_type.h
src/functional/: curry.h  either.h  maybe.h  operators.h  validation.h
src/interfaces/: media_stream.cc  media_stream.h  media_stream_track.cc  media_stream_track.h  rtc_audio_sink.cc  rtc_audio_sink.h  rtc_audio_source.cc  rtc_audio_source.h  rtc_data_channel.cc  rtc_data_channel.h  rtc_dtls_transport.cc  rtc_dtls_transport.h  rtc_ice_transport.cc  rtc_ice_transport.h  rtc_peer_connection.cc  rtc_peer_connection.h  rtc_rtp_receiver.cc  rtc_rtp_receiver.h  rtc_rtp_sender.cc  rtc_rtp_sender.h  rtc_rtp_transceiver.cc  rtc_rtp_transceiver.h  rtc_sctp_transport.cc  rtc_sctp_transport.h  rtc_video_sink.cc  rtc_video_sink.h  rtc_video_source.cc  rtc_video_source.h
src/interfaces/rtc_peer_connection/: create_session_description_observer.cc  create_session_description_observer.h  peer_connection_factory.cc  peer_connection_factory.h  rtc_stats_collector.cc  rtc_stats_collector.h  set_session_description_observer.cc  set_session_description_observer.h
src/methods/: get_display_media.cc  get_display_media.h  get_user_media.cc  get_user_media.h  i420_helpers.cc  i420_helpers.h
src/node/: async_context_releaser.cc  async_context_releaser.h  async_object_wrap.h  async_object_wrap_with_loop.h  deferrer.cc  deferrer.h  error_factory.cc  error_factory.h  event_loop.h  event_queue.h  events.h  promise.h  utility.h  wrap.h
src/utilities/: bidi_map.h
src/webrtc/: test_audio_device_module.cc  test_audio_device_module.h
test/: all.js  connect.js  get-settings.js  multiconnect.js  rtcaudiosink.js  rtcrtpreceiver.js  rtcrtpsender.js
test/lib/: frame.js
toolchains/: darwin-arm64.toolchain  linux-arm64.toolchain
types/: index.d.ts  nonstandard.d.ts
